# aptorch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create-command.sh
.github/workflows/: release.yml
aptorch/: data.py  dlm.py  esn.py  init.py  kan.py  metrics.py
examples/: example_esn.py  example_kan.py
notebooks/: DLM.ipynb  Diffusion_Language_Model.ipynb  ESN.ipynb  ESN_GPT.ipynb  Shakespeare.ipynb  diffusion.ipynb
notebooks/lightning_logs/version_0/: metrics.csv
