[tool.poetry]
name = "aptorch"
version = "0.1.0"
description = "Aptus pytorch models using Reservoir Computing, Associative Memory Networks and Recurrent Neural Networks."
authors = ["antodima <antonio.di.mauro.23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.2.0"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
python-semantic-release = "^9.1.1"
ipykernel = "^6.29.3"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
tqdm = "^4.66.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
install = "poetry install --no-interaction --only-root"
install_dev_deps = "poetry install --no-interaction --no-root --only=main,dev"
install_precommit = "pre-commit install --hook-type commit-msg"
start_shell = "echo 'source $(poetry env info --path)/bin/activate' >> ~/.bashrc"
