[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aptorch"
version = "0.1.0"
description = "Aptus pytorch models and algorithms"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "ipykernel>=6.30.1",
    "lightning>=2.5.2",
    "optuna>=4.4.0",
    "optuna-integration[pytorch-lightning]>=4.4.0",
    "peft>=0.17.0",
    "pre-commit>=4.2.0",
    "tokenizers>=0.21.4",
    "torch>=2.8.0",
    "transformers>=4.55.0",
]

[tool.setuptools.packages.find]
where = ["aptorch"]

[tool.uv]
package = true
